# blue-pill-ds1820-temp-sensor

./: Cargo.toml  README.md  azure-pipelines.yml
.cargo/: config
src/: main.rs
