[package]
name = "blue-pill-quickstart"
version = "0.1.0"
authors = ["Guillaume Pinot <texitoi@texitoi.eu>"]
edition = "2018"


[dependencies]
cortex-m = "0.5.8"
cortex-m-rt = "0.6.7"
panic-semihosting = "0.5.1"
panic-itm = "0.4.0"
# cortex-m-rtfm = "0.3.1"
cortex-m-semihosting = "0.3.2"
enc28j60 = "0.2.1"
heapless = "0.4.2"
m = "0.1.1"
mfrc522 = "0.2.0"
serde_derive = "1.0.88"
nb = "0.1.1"


[dependencies.stm32f1xx-hal]
version = "0.2.0"
features = ["stm32f103", "rt"]



[profile.dev]
incremental = false
codegen-units = 1

[profile.release]
codegen-units = 1
debug = true
lto = true